Re-attempt to fix zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 }
 
 button {
-    touch-action: manipulation;
+    touch-action: none;
     border: 1px solid black;    
     padding: 20px;
     font-size: 20px;
